<resources>

    //Ting ting missinglogin box
    <string name="meesinglogin_login">Login</string>
    <string name="meesinglogin_signup">Sign up</string>
    <string name="meesinglogin_createmeeting">Create meeting</string>
    <string name="meesinglogin_lookupmeeting">Look up meeting with ID</string>
    <string name="meesinglogin_text">Uden at være logget kan du følgende: </string>

    //navne til toolbaren:
    <string name="app_name">SmartMeeting</string>
    <string name="create_meeting">Create meeting</string>
    <string name="create_agenda">Create agenda</string>
    <string name="add_topic">Add topic</string>
    <string name="add_participants">Add participants</string>
    <string name="select_participants">Select participants</string>
    <string name="create_profile">Create profile</string>

    // Menuer her under
    <string name="menu_home">Home</string>
    <string name="menu_contacts">Contacts</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_groupe">Groups</string>
    <string name="menu_settings">Settings</string>
    //underline strings
    <string name="underline_name"><u>Søren Aarup Poulsen</u>.</string>
</resources>
