<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/home"
        android:title="@string/menu_home"
        app:showAsAction="never">
    </item>
    <item
        android:id="@+id/contacts"
        android:title="@string/menu_contacts"
        app:showAsAction="never">
    </item>
    <item
        android:id="@+id/groupe"
        android:title="@string/menu_groupe"
        app:showAsAction="never">
    </item>
    <item
        android:id="@+id/profile"
        android:title="@string/menu_profile"
        app:showAsAction="never">
    </item>
    <item
        android:id="@+id/settings"
        android:title="@string/menu_settings"
        app:showAsAction="never">
    </item>

</menu>